<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EFEFEF"
    android:padding="16dp"
    android:id="@+id/main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Back Arrow Icon -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_back"
            android:src="@drawable/ic_arrow_back"
            />
        <TextView
            android:id="@+id/specialization_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/filter_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <!-- Specialization Grid -->
        <TextView
            android:id="@+id/category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/category_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/rounded_edit_text_background">

            <!-- Spinner -->
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="40dp"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"
                android:popupBackground="@android:color/white" />

            <!-- Dropdown Icon -->
            <ImageView
                android:id="@+id/dropdown_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="13dp"
                android:src="@drawable/ic_dropdown"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/title_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

            <!-- Search Bar -->
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_edit_text_background"
            android:drawablePadding="8dp"
            android:textColorHint="@color/gray"
            android:padding="12dp"
            android:paddingStart="40dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="40dp"
            tools:ignore="RtlSymmetry" />




        <TextView
            android:id="@+id/amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/amount_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="80dp">

                <!-- Min Amount -->
                <EditText
                    android:id="@+id/min_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/min_hint"
                    android:inputType="numberDecimal"
                    android:background="@drawable/rounded_edit_text_background"
                    android:padding="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/to_hint"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <!-- Max Amount -->
                <EditText
                    android:id="@+id/max_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/max_hint"
                    android:inputType="numberDecimal"
                    android:background="@drawable/rounded_edit_text_background"
                    android:padding="12dp" />

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/go_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_filter_button"
            android:background="@drawable/rounded_button_background"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:gravity="center" />

    </LinearLayout>
</ScrollView>
