<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/go_back"
        android:layout_marginBottom="40dp"
        app:tint="@color/purple"
        android:src="@drawable/ic_arrow_back" />

    <!-- Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_project_header"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp" />

    <!-- Project Title -->
    <EditText
        android:id="@+id/project_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_project_title"
        android:background="@drawable/rounded_edit_text_background"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:padding="14dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edit_text_background">

        <!-- Spinner -->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="40dp"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown"
            android:popupBackground="@android:color/white" />

        <!-- Dropdown Icon -->
        <ImageView
            android:id="@+id/dropdown_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:src="@drawable/ic_dropdown"
            />

    </RelativeLayout>

    <!-- Project Description -->
    <EditText
        android:id="@+id/project_description_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_project_description"
        android:background="@drawable/rounded_edit_text_background"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="5dp"
        android:paddingBottom="100dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" />

    <!-- Skills Needed -->
    <EditText
        android:id="@+id/skills_needed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_skills_needed"
        android:background="@drawable/rounded_edit_text_background"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:padding="14dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp" />


    <!-- Amount -->
    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:background="@drawable/rounded_edit_text_background"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:inputType="number" />

    <!-- This view takes the remaining space -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Add Button -->
    <android.widget.Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:background="@drawable/rounded_button_background"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:paddingStart="100dp"
        android:paddingBottom="20dp"
        android:paddingEnd="100dp"
        android:paddingTop="20dp"
        android:textAllCaps="true"
        android:elevation="2dp" />
</LinearLayout>
