<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/dmsans_bold"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/login_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_description"
                android:textAlignment="center"
                android:textColor="@color/sub_title_grey_color"
                android:textSize="14sp"
                android:layout_marginBottom="60dp" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edit_text_background"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:textColorHint="@color/gray"
                android:padding="12dp"
                android:paddingStart="40dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginBottom="30dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edit_text_background"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                android:padding="12dp"
                android:paddingStart="40dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginBottom="15dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/sub_title_grey_color"
                android:textSize="14sp"
                android:layout_marginBottom="40dp" />

            <android.widget.Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/rounded_button_background"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:padding="16dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textAlignment="center"
                    android:textColor="@color/sub_title_grey_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/dmsans_bold"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
